# dealii_parametric_shaft

./: CMakeLists.txt  README.md  parametric_shaft_dynamic_v10.cpp  parametric_shaft_dynamic_v10_2trias.cpp  parametric_shaft_dynamic_v11.cpp
src/: .gitignore  parametric_shaft_dynamic_v11.cpp  parametric_shaft_dynamic_v11_original.cpp  parametric_shaft_dynamic_v12.cpp  parametric_shaft_dynamic_v12_2.cpp  parametric_shaft_dynamic_v13.cpp  parametric_shaft_dynamic_v3.cpp  parametric_shaft_dynamic_v4.cpp  parametric_shaft_dynamic_v5.cpp  parametric_shaft_dynamic_v6.cpp  parametric_shaft_dynamic_v7.cpp  parametric_shaft_dynamic_v7_works.cpp  parametric_shaft_dynamic_v8.cpp  parametric_shaft_dynamic_v8_3_bearings_constraint.cpp  parametric_shaft_dynamic_v9.cpp  parametric_shaft_dynamic_v9_compression.cpp  parametric_shaft_dynamic_v9_tension.cpp  parametric_shaft_dynamic_v9_torsion.cpp
